// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumericInput renders correctly with defaults 1`] = `
.emotion-0 {
  height: 28px;
  line-height: 1.75;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  font-size: 16px;
  font-family: Ciutadella;
  color: #323232;
}

.emotion-2 input::-webkit-outer-spin-button,
.emotion-2 input::-webkit-inner-spin-button {
  margin: 0px;
  -webkit-appearance: none;
}

.emotion-2 input[type="number"] {
  -moz-appearance: textfield;
}

.emotion-2 .rc-input-number {
  margin: 0;
  padding: 0;
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  border: 2px solid #dadada;
  border-radius: 0px;
  position: relative;
  width: 100%;
  height: 55px;
}

.emotion-2 .rc-input-number-focused {
  border-color: #8de2e0;
}

.emotion-2 .rc-input-number-handler {
  text-align: center;
  line-height: 12px;
  height: 12px;
  overflow: hidden;
  display: block;
  touch-action: none;
}

.emotion-2 .rc-input-number-handler-up {
  position: absolute;
  right: 0px;
  width: calc(30px + 22px);
  height: 100%;
}

.emotion-2 .rc-input-number-handler-down {
  position: absolute;
  left: 0px;
  width: calc(30px + 22px);
  height: 100%;
}

.emotion-2 .rc-input-number-input {
  text-align: center;
  outline: 0;
  line-height: 26px;
  height: 100%;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  border: 0;
  padding: 0;
  width: 99%;
  border-radius: 0px;
  display: block;
  font-size: 22px;
  color: #323232;
  font-family: Ciutadella;
  -moz-appearance: textfield;
}

.emotion-2 .rc-input-number-input::-ms-clear {
  display: none;
}

.emotion-2 .rc-input-number-input-wrap {
  overflow: hidden;
  height: 100%;
}

.emotion-2 .rc-input-number-handler-down-disabled .runway-numeric-input__increment_icon,
.emotion-2 .rc-input-number-handler-up-disabled .runway-numeric-input__increment_icon,
.emotion-2 .rc-input-number-handler-down-disabled .runway-numeric-input__decrement_icon,
.emotion-2 .rc-input-number-handler-up-disabled .runway-numeric-input__decrement_icon {
  fill: #dadada;
}

.emotion-1 {
  position: absolute !important;
  display: block;
  visibility: visible;
  overflow: hidden;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
}

<NumericInput
  ariaDescription=""
  highlightInvalid={false}
  label=""
  onChange={[Function]}
  setRef={null}
  value={null}
>
  <label
    className="emotion-0"
  />
  <div
    className="emotion-2"
  >
    <InputNumber
      aria-describedby="undefined-description"
      autoComplete="off"
      downHandler={
        <Unknown
          className="runway-numeric-input__decrement_icon"
          height="100%"
          width="30px"
        />
      }
      focusOnUpDown={true}
      min={-9007199254740991}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onPressEnter={[Function]}
      parser={[Function]}
      prefixCls="rc-input-number"
      required={false}
      setRef={null}
      step={1}
      style={Object {}}
      type="number"
      upHandler={
        <Unknown
          className="runway-numeric-input__increment_icon"
          height="100%"
          width="30px"
        />
      }
      useTouch={false}
      value={null}
    >
      <div
        className="rc-input-number"
        style={Object {}}
      >
        <div
          className="rc-input-number-handler-wrap"
        >
          <InputHandler
            aria-disabled={false}
            aria-label="Increase Value"
            className="rc-input-number-handler rc-input-number-handler-up "
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            prefixCls="rc-input-number"
            role="button"
            unselectable="unselectable"
          >
            <TouchFeedback
              activeClassName="rc-input-number-handler-active"
              disabled={false}
            >
              <span
                aria-disabled={false}
                aria-label="Increase Value"
                className="rc-input-number-handler rc-input-number-handler-up "
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                unselectable="unselectable"
              >
                <Component
                  className="runway-numeric-input__increment_icon"
                  height="100%"
                  width="30px"
                >
                  <span>
                    Mock Plus Icon
                  </span>
                </Component>
              </span>
            </TouchFeedback>
          </InputHandler>
          <InputHandler
            aria-disabled={false}
            aria-label="Decrease Value"
            className="rc-input-number-handler rc-input-number-handler-down "
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            prefixCls="rc-input-number"
            role="button"
            unselectable="unselectable"
          >
            <TouchFeedback
              activeClassName="rc-input-number-handler-active"
              disabled={false}
            >
              <span
                aria-disabled={false}
                aria-label="Decrease Value"
                className="rc-input-number-handler rc-input-number-handler-down "
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                unselectable="unselectable"
              >
                <Component
                  className="runway-numeric-input__decrement_icon"
                  height="100%"
                  width="30px"
                >
                  <span>
                    Mock Minus Icon
                  </span>
                </Component>
              </span>
            </TouchFeedback>
          </InputHandler>
        </div>
        <div
          className="rc-input-number-input-wrap"
        >
          <input
            aria-describedby="undefined-description"
            aria-valuemin={-9007199254740991}
            aria-valuenow={null}
            autoComplete="off"
            className="rc-input-number-input"
            min={-9007199254740991}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseUp={[Function]}
            required={false}
            role="spinbutton"
            step={1}
            type="number"
            value=""
          />
        </div>
      </div>
    </InputNumber>
    <div
      className="emotion-1"
    >
      <span
        aria-atomic="true"
        aria-live="polite"
      />
      <span
        aria-atomic="true"
        aria-live="off"
        id="undefined-description"
      >
        Current value is null.
      </span>
    </div>
  </div>
</NumericInput>
`;

exports[`NumericInput renders correctly with props 1`] = `
.emotion-0 {
  height: 28px;
  line-height: 1.75;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  font-size: 16px;
  font-family: Ciutadella;
  color: #323232;
}

.emotion-2 input::-webkit-outer-spin-button,
.emotion-2 input::-webkit-inner-spin-button {
  margin: 0px;
  -webkit-appearance: none;
}

.emotion-2 input[type="number"] {
  -moz-appearance: textfield;
}

.emotion-2 .rc-input-number {
  margin: 0;
  padding: 0;
  line-height: 26px;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  border: 2px solid #dadada;
  border-radius: 0px;
  position: relative;
  width: 100%;
  height: 55px;
}

.emotion-2 .rc-input-number-focused {
  border-color: #8de2e0;
}

.emotion-2 .rc-input-number-handler {
  text-align: center;
  line-height: 12px;
  height: 12px;
  overflow: hidden;
  display: block;
  touch-action: none;
}

.emotion-2 .rc-input-number-handler-up {
  position: absolute;
  right: 0px;
  width: calc(30px + 22px);
  height: 100%;
}

.emotion-2 .rc-input-number-handler-down {
  position: absolute;
  left: 0px;
  width: calc(30px + 22px);
  height: 100%;
}

.emotion-2 .rc-input-number-input {
  text-align: center;
  outline: 0;
  line-height: 26px;
  height: 100%;
  -webkit-transition: all 0.3s ease;
  transition: all 0.3s ease;
  border: 0;
  padding: 0;
  width: 99%;
  border-radius: 0px;
  display: block;
  font-size: 22px;
  color: #323232;
  font-family: Ciutadella;
  -moz-appearance: textfield;
}

.emotion-2 .rc-input-number-input::-ms-clear {
  display: none;
}

.emotion-2 .rc-input-number-input-wrap {
  overflow: hidden;
  height: 100%;
}

.emotion-2 .rc-input-number-handler-down-disabled .runway-numeric-input__increment_icon,
.emotion-2 .rc-input-number-handler-up-disabled .runway-numeric-input__increment_icon,
.emotion-2 .rc-input-number-handler-down-disabled .runway-numeric-input__decrement_icon,
.emotion-2 .rc-input-number-handler-up-disabled .runway-numeric-input__decrement_icon {
  fill: #dadada;
}

.emotion-1 {
  position: absolute !important;
  display: block;
  visibility: visible;
  overflow: hidden;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
}

<NumericInput
  ariaDescription=""
  highlightInvalid={false}
  isInvalid={true}
  isInvalidMessage="mock message"
  isTabletAndUp={false}
  label=""
  onChange={[Function]}
  setRef={null}
  value={null}
>
  <label
    className="emotion-0"
  />
  <div
    className="emotion-2"
  >
    <InputNumber
      aria-describedby="undefined-description"
      autoComplete="off"
      downHandler={
        <Unknown
          className="runway-numeric-input__decrement_icon"
          height="100%"
          width="30px"
        />
      }
      focusOnUpDown={true}
      isInvalid={true}
      isInvalidMessage="mock message"
      isTabletAndUp={false}
      min={-9007199254740991}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onPressEnter={[Function]}
      parser={[Function]}
      prefixCls="rc-input-number"
      required={false}
      setRef={null}
      step={1}
      style={Object {}}
      type="number"
      upHandler={
        <Unknown
          className="runway-numeric-input__increment_icon"
          height="100%"
          width="30px"
        />
      }
      useTouch={false}
      value={null}
    >
      <div
        className="rc-input-number"
        style={Object {}}
      >
        <div
          className="rc-input-number-handler-wrap"
        >
          <InputHandler
            aria-disabled={false}
            aria-label="Increase Value"
            className="rc-input-number-handler rc-input-number-handler-up "
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            prefixCls="rc-input-number"
            role="button"
            unselectable="unselectable"
          >
            <TouchFeedback
              activeClassName="rc-input-number-handler-active"
              disabled={false}
            >
              <span
                aria-disabled={false}
                aria-label="Increase Value"
                className="rc-input-number-handler rc-input-number-handler-up "
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                unselectable="unselectable"
              >
                <Component
                  className="runway-numeric-input__increment_icon"
                  height="100%"
                  width="30px"
                >
                  <span>
                    Mock Plus Icon
                  </span>
                </Component>
              </span>
            </TouchFeedback>
          </InputHandler>
          <InputHandler
            aria-disabled={false}
            aria-label="Decrease Value"
            className="rc-input-number-handler rc-input-number-handler-down "
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            prefixCls="rc-input-number"
            role="button"
            unselectable="unselectable"
          >
            <TouchFeedback
              activeClassName="rc-input-number-handler-active"
              disabled={false}
            >
              <span
                aria-disabled={false}
                aria-label="Decrease Value"
                className="rc-input-number-handler rc-input-number-handler-down "
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchCancel={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="button"
                unselectable="unselectable"
              >
                <Component
                  className="runway-numeric-input__decrement_icon"
                  height="100%"
                  width="30px"
                >
                  <span>
                    Mock Minus Icon
                  </span>
                </Component>
              </span>
            </TouchFeedback>
          </InputHandler>
        </div>
        <div
          className="rc-input-number-input-wrap"
        >
          <input
            aria-describedby="undefined-description"
            aria-valuemin={-9007199254740991}
            aria-valuenow={null}
            autoComplete="off"
            className="rc-input-number-input"
            min={-9007199254740991}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseUp={[Function]}
            required={false}
            role="spinbutton"
            step={1}
            type="number"
            value=""
          />
        </div>
      </div>
    </InputNumber>
    <div
      className="emotion-1"
    >
      <span
        aria-atomic="true"
        aria-live="polite"
      />
      <span
        aria-atomic="true"
        aria-live="off"
        id="undefined-description"
      >
        Current value is null.
      </span>
    </div>
  </div>
</NumericInput>
`;
